Fetch data and render list rockets

--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,34 @@
 .li-item {
   text-decoration: none;
 }
+
+.rocketCard {
+  display: flex;
+  flex-direction: row;
+}
+
+.rocketImg {
+width :200px;
+}
+
+.rocketInfo {
+  display: flex;
+  gap: 12px;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 12px;
+}
+
+.description {
+  display: flex;
+  justify-items: flex-start;
+  text-align: left;
+  font-size: .7rem;
+}
+
+.listRockets{
+  display: flex;
+  flex-direction: column;
+  margin-left: 12px;
+  gap: 12px;
+}
