--- a/src/styling/MyProfile.css
+++ b/src/styling/MyProfile.css
@@ -1,4 +1,27 @@
+.profile-container {
+  display: flex;
+  margin: 40px;
+}
+
+.profile-rockets-title {
+  font-size: 30px;
+  font-weight: 400;
+}
+
 .reserve-container {
-  border: 2px solid #d1d1d1;
-  width: 40vw;
+  width: 45%;
+}
+
+.profile-rockets {
+  border: 1.5px solid #e8e8e8;
+}
+
+.reserve-item {
+  border-bottom: 1.5px solid #e8e8e8;
+  padding: 15px;
+}
+
+.no-reserve {
+  padding: 15px;
+  margin: 0;
 }
