--- a/src/styling/Nav.css
+++ b/src/styling/Nav.css
@@ -17,10 +17,11 @@
 .nav-bar {
   padding: 20px;
   background-color: #fff;
-  border-bottom: 1px solid #e8e8e8;
+  border-bottom: 2px solid #e8e8e8;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0 30px;
 }
 
 .nav-links {
